--- a/index.html
+++ b/index.html
@@ -117,18 +117,18 @@ blockquote p{font-size:17px;font-weight:700;line-height:1.4em;transition:all .5s
      <div><blockquote id='bq'>
 
        <!-- Konten Pembukaan -->
-       <p id="kalimat">Jadian Yuk?! 😆❤️</p>
+       <p id="kalimat">Mabar Yuk?! 😆️</p>
        <p id="kalbawh">Hehehe 🤣🙏🏻</p>
        <p id="kalbawah">Gaboleh nolak yaa 😡</p>
-       <p id="kalbawahb">Atau dalam hitungan ke <span>[ <b id="ctimer">3</b> ]</span><br>kamu jadi <b>Pacarku</b> 🤣❤️</p>
+       <p id="kalbawahb">Atau dalam hitungan ke <span>[ <b id="ctimer">3</b> ]</span><br>kamu jadi <b>tmen mabarku</b> 🤣❤️</p>
        
-       <p id="kalimatd">Yeaayy! 🥳❤️</p>
+       <p id="kalimatd">Yeaayy! 🥳️</p>
        <p id="kalimate" class="hidden">Makasii udh nerima aku.. 😆</p>
-       <p id="kalimatf" class="hidden">Sekarang kamu adalah <b>Pacarku</b> yang ke: <b id="angka"></b> 🤣</p>
+       <p id="kalimatf" class="hidden">Sekarang kamu adalah <b>Tmen Mabarku</b> yang ke: <b id="angka"></b> 🤣</p>
        <p id="kalimatAkhir">Ahahaha :v</p>
        
        <p id="kalimatakhirA" class="hidden">Tapi Boong 🤣🙏🏻</p>
-       <p id="kalimatakhirB" class="hidden">Aku ga punya pacar sebanyak itu yaa 😡❤️</p>
+       <p id="kalimatakhirB" class="hidden">Aku ga punya tmen mabar sebanyak itu yaa 😡️</p>
 
      </blockquote></div>
 
