--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 }
 @keyframes fanim {0% {background-position: 0% 0%;}25% {background-position: 100% 100%;} 50% {background-position: 0% 100%;} 75% {background-position: 50% 50%;} 100% {background-position: 0% 0%;}}
 body{background-color:#000;font-family:var(--gaya-font);padding: 20px 25px;-webkit-user-select: none; -ms-user-select: none; user-select: none;} a{text-decoration:none;}
-body::before{content:"\00A9  Rayys | PalingIT";color:white;opacity:.2;font-size:11px;position:fixed;bottom:25px;right:25px;z-index:2}
+body::before{content:"\00A9  by XennChan ";color:white;opacity:.2;font-size:11px;position:fixed;bottom:25px;right:25px;z-index:2}
 #bodyblur{opacity:.2;position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,.3);transition:all 1s ease;} 
 #wallpaper{width:100%;height:100%;transform: scale(2);transition:all 1.3s ease;}
 #beneranblur{position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,.3);-webkit-backdrop-filter:blur(0px); backdrop-filter:blur(0px);transition:all 3s ease;}
@@ -178,7 +178,7 @@ blockquote p{font-size:17px;font-weight:700;line-height:1.4em;transition:all .5s
   function multifungsi(){if(ftom==1){akhirct();} if(ftom==2){menuju();}}
   function htombol(){if(ftom==0){Tombol.style="";setTimeout(hilangbn,500);}} function hilangbn(){Bn.style.display="none";Bn2.style.display="none";}
   
-  async function menuju(){window.location = "https://api.whatsapp.com/send?phone=&text=" + pesanwhatsapp;}
+  async function menuju(){window.location = "https://wa.me/6285892962667?text=" + pesanwhatsapp;}
 
   const body = document.querySelector("body");const swalst = Swal.mixin({timer: 2777, allowOutsideClick: false, showConfirmButton: false, timerProgressBar: true, imageHeight: 90,}); const swals = Swal.mixin({allowOutsideClick: false, cancelButtonColor: '#FF0040', imageWidth: 100, imageHeight: 100,});
   audio = new Audio('' + linkmp3.src);
