--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ blockquote p{font-size:17px;font-weight:700;line-height:1.4em;transition:all .5s
      </div>
      
      <!-- Pesan yang dikirim ke WhatsApp -->
-     <span id="pesanWA" class="sembunyi">Heleh ngeselin 🤣</span>
+     <span id="pesanWA" class="sembunyi">Ayolah gas</span>
      
    </div>
 
